--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
     <string name="app_name">Nigerian Army</string>
-    <string name="about_text">Automation and integration of real time biometric verification and identification system for the Nigeria Army on a central database. Having a unique staff-identifier-link to their profile, and biometric verification, with encrypted grade level/step status on the payroll. This eliminates the cases of ghost workers and other forms of fraudulent activities.</string>
-    <string name="base_url">https://bippiis.com/api/v1/</string>
+    <string name="about_text">Automation and integration of real time biometric verification and identification system for the Nigeria Army on a central database. Having a unique staff-identifier-link to their profile, and biometric verification.</string>
+    <string name="base_url">https://www.gamintcorporateltd.com/gamint-army-app/api/</string>
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
 
